tests/rosetta/out/Pascal/csv-to-html-translation-2.pas
// Generated by Mochi compiler v0.10.26 on 2025-07-16T11:36:24Z
program CsvToHtmlTranslation2;
{$mode objfpc}
{$modeswitch nestedprocvars}
uses SysUtils, fgl, fphttpclient, Classes, Variants, fpjson, jsonparser, fpjsonrtti;

type
  generic TArray<T> = array of T;

generic function _appendList<T>(arr: specialize TArray<T>; val: T): specialize TArray<T>;
var i,n: Integer;
begin
  n := Length(arr);
  SetLength(Result, n + 1);
  for i := 0 to n - 1 do
    Result[i] := arr[i];
  Result[n] := val;
end;

generic function _indexList<T>(arr: specialize TArray<T>; i: integer): T;
begin
  if i < 0 then i := Length(arr) + i;
  if (i < 0) or (i >= Length(arr)) then
    raise Exception.Create('index out of range');
  Result := arr[i];
end;

function _splitString(s, sep: string): specialize TArray<string>;
var sl: TStringList; i: Integer;
begin
  sl := TStringList.Create;
  try
    sl.Delimiter := sep[1];
    sl.StrictDelimiter := True;
    sl.DelimitedText := s;
    SetLength(Result, sl.Count);
    for i := 0 to sl.Count - 1 do
      Result[i] := sl[i];
  finally
    sl.Free;
  end;
end;

var
  c: string;
  cell: Variant;
  cells: string;
  h: string;
  headings: boolean;
  i: integer;
  line: Variant;
  row: string;
  rows: specialize TArray<specialize TArray<string>>;
  th: string;

begin
  c := 'Character,Speech
' + 'The multitude,The messiah! Show us the messiah!
' + 'Brians mother,<angry>Now you listen here! He''s not the messiah; he''s a very naughty boy! Now go away!</angry>
' + 'The multitude,Who are you?
' + 'Brians mother,I''m his mother; that''s who!
' + 'The multitude,Behold his mother! Behold his mother!';
  rows := specialize TArray<specialize TArray<string>>([]);
  for line in _splitString(c, '
') do
  begin
    rows := specialize _appendList<specialize TArray<string>>(rows, _splitString(line, ','));
  end;
  headings := True;
  writeln('<table>');
  if headings then
  begin
    if (Length(rows) > 0) then
    begin
      th := '';
      for h in specialize _indexList<specialize TArray<string>>(rows, 0) do
      begin
        th := th + '<th>' + h + '</th>';
      end;
      writeln('   <thead>');
      writeln('      <tr>' + th + '</tr>');
      writeln('   </thead>');
      writeln('   <tbody>');
      i := 1;
      while (i < Length(rows)) do
      begin
        cells := '';
        for cell in specialize _indexList<specialize TArray<string>>(rows, i) do
        begin
          cells := cells + '<td>' + cell + '</td>';
        end;
        writeln('      <tr>' + cells + '</tr>');
        i := i + 1;
      end;
      writeln('   </tbody>');
    end;
  end else
  begin
    for row in rows do
    begin
      cells := '';
      for cell in row do
      begin
        cells := cells + '<td>' + cell + '</td>';
      end;
      writeln('    <tr>' + cells + '</tr>');
    end;
  end;
  writeln('</table>');
end.
